[package]
name = "heur"
version = "0.1.0"
edition = "2024"

[package.metadata.docs.rs]
all-features = true
cargo-args = ["-Z", "unstable-options", "-Z", "rustdoc-scrape-examples"]
rustdoc-args = ["--generate-link-to-definition", "--cfg", "docsrs"]

[dependencies]
heur-core = { version = "0.1.0", path = "heur-core/" }
heur-bits = { version = "0.1.0", path = "heur-bits/", optional = true, default-features = false }
heur-genetic = { version = "0.1.0", path = "heur-genetic/", optional = true, default-features = false }

[features]
default = ["std"]
std = ["alloc", "heur-core/std", "heur-bits?/std"]
alloc = ["heur-core/alloc", "heur-bits?/alloc"]
either = ["heur-core/either", "heur-bits?/either", "heur-genetic?/either"]
bits = ["dep:heur-bits"]
genetic = ["dep:heur-genetic"]

[[example]]
name = "knapsack"
doc-scrape-examples = true
required-features = ["std", "bits"]

[[example]]
name = "n_queens"
doc-scrape-examples = true
required-features = ["std", "genetic"]

[[bench]]
name = "sphere"
harness = false
required-features = ["std", "genetic"]

[dev-dependencies]
divan = "0.1.21"
mahf = "0.1.0"
ordered-float = "4.2.0" # TODO: Do we need the default `std` feature?
rand = "0.9.1"          # NOTE: Declared here again since we need `ThreadRng`, which requires the default `std` feature

[workspace]
members = ["heur-core", "heur-bits", "heur-genetic"]
