[package]
name = "heur-bits"
version = "0.1.0"
edition = "2024"

[package.metadata.docs.rs]
all-features = true
cargo-args = ["-Z", "unstable-options", "-Z", "rustdoc-scrape-examples"]
rustdoc-args = ["--generate-link-to-definition", "--cfg", "docsrs"]

[dependencies]
rand = { version = "0.9.1", default-features = false }
heur-core = { version = "0.1.0", path = "../heur-core", default-features = false }

[features]
default = ["std"]
std = ["alloc", "heur-core/std", "rand/std"]
alloc = ["heur-core/alloc", "rand/alloc"]
either = ["heur-core/either"]
