[package]
name = "heur-core"
version = "0.1.0"
edition = "2021"

[package.metadata.docs.rs]
all-features = true
cargo-args = ["-Z", "unstable-options", "-Z", "rustdoc-scrape-examples"]
rustdoc-args = ["--generate-link-to-definition", "--cfg", "docsrs"]

[dependencies]
either = { version = "1.12.0", optional = true }                             # TODO: Do we need the default `use_std` feature?
rand = { version = "0.8.5", default-features = false, features = ["alloc"] } # TODO: Should we gate default features behind an `std` or `alloc` feature?

[features]
default = []
either = ["dep:either"]
