[package]
name = "heur-core"
version = "0.1.0"
edition = "2024"

[package.metadata.docs.rs]
all-features = true
cargo-args = ["-Z", "unstable-options", "-Z", "rustdoc-scrape-examples"]
rustdoc-args = ["--generate-link-to-definition", "--cfg", "docsrs"]

[dependencies]
either = { version = "1.15.0", optional = true, default-features = false }

[features]
default = ["std"]
std = ["alloc", "either?/std"]
alloc = []
either = ["dep:either"]
