[package]
name = "heur-genetic"
version = "0.1.0"
edition = "2024"

[package.metadata.docs.rs]
all-features = true
cargo-args = ["-Z", "unstable-options", "-Z", "rustdoc-scrape-examples"]
rustdoc-args = ["--generate-link-to-definition", "--cfg", "docsrs"]

[dependencies]
either = { version = "1.15.0", optional = true, default-features = false }
rand = { version = "0.9.1", default-features = false, features = ["alloc"] }
heur-core = { version = "0.1.0", path = "../heur-core", default-features = false, features = ["alloc"] }

[features]
default = []
either = ["dep:either", "heur-core/either"]
